--- a/appspec.yml
+++ b/appspec.yml
@@ -10,3 +10,8 @@ permissions:
     owner: ec2-user
     group: ec2-user
    
+hooks:
+  ApplicationStart:
+    - location: deploy.sh
+      timeout: 120
+      runas: ec2-user
