--- a/build.gradle
+++ b/build.gradle
@@ -21,12 +21,17 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compile 'org.projectlombok:lombok'
-	compile 'com.h2database:h2'
-	runtimeOnly 'mysql:mysql-connector-java'
+	implementation('org.projectlombok:lombok')
+	runtimeOnly('org.springframework.boot:spring-boot-devtools')
+	runtimeOnly('com.h2database:h2')
+	implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
+	implementation group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
-test {
-	useJUnitPlatform()
-}
+//test {
+//	useJUnitPlatform()
+//}
