--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,36 @@
 spring:
   profiles:
     active: localhost
+  jpa:
+    show_sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+  datasource:
+    hikari:
+      jdbc-url: jdbc:h2:mem://localhost/~/testdb;MODE=MYSQL
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+  devtools:
+    livereload:
+      enabled: true
+  freemarker:
+    cache: false
+  thymeleaf:
+    cache: false
 
 ---
 spring:
   profiles: docker-compose
-#   datasource:
-#     url: jdbc:mysql://db/spring_db
-#     username: root
-#     password: password
-#     driver-class-name: com.mysql.cj.jdbc.Driver
-#   jpa:
-#     hibernate:
-#       ddl-auto: update
+  jpa:
+    hibernate:
+      ddl-auto: update
 server:
-  port: 8100
+   ssl:
+     enable: true
+     key-store: "classpath:keystore.p12"
+#     key-store-password: '${KEY_PW}'
+#     key-password: '${KEY_PW}'
+   port: 8100
