https://hkpark130.p-e.kr:8080/issues/11

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,10 @@ spring:
     cache: false
   thymeleaf:
     cache: false
+server:
+  error:
+    include-exception: true
+    include-stacktrace: always
 
 ---
 spring:
