--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,11 @@ spring:
     console:
       enabled: true
       path: /h2-console
+      settings: 
+        web-allow-others: true
+  sql:
+    init:
+      mode: always
   devtools:
     livereload:
       enabled: true
@@ -25,6 +30,7 @@ spring:
   thymeleaf:
     cache: false
 server:
+  port: 8100
   error:
     include-exception: true
     include-stacktrace: always
