--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,34 +1,38 @@
 spring:
   profiles:
-    active: localhost
+    active: local
 
 ---
 spring:
-  profiles: local
-  jpa:
-    show_sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+  config:
+    activate:
+      on-profile: local
   datasource:
+    driver-class-name: org.h2.Driver
     hikari:
-      jdbc-url: jdbc:h2:mem://localhost/~/testdb;MODE=MYSQL
+#      jdbc-url: jdbc:h2:mem:testdb;MODE=MYSQL;DB_CLOSE_DELAY=-1
+      jdbc-url: jdbc:h2:mem:testdb;MODE=MYSQL
+    username: sa
+    password:
+  jpa:
+    defer-datasource-initialization: true
+    hibernate:
+      ddl-auto: update
+    database-platform: org.hibernate.dialect.H2Dialect
+    show-sql: true
+#    properties:
+#      hibernate:
+#        dialect: org.hibernate.dialect.MySQLDialect
   h2:
     console:
       enabled: true
       path: /h2-console
-      settings: 
+      settings:
         web-allow-others: true
   sql:
     init:
       mode: always
-  devtools:
-    livereload:
-      enabled: true
-  freemarker:
-    cache: false
-  thymeleaf:
-    cache: false
+
 server:
   port: 8100
   error:
@@ -37,7 +41,9 @@ server:
 
 ---
 spring:
-  profiles: docker-compose
+  config:
+    activate:
+      on-profile: docker-compose
   jpa:
     hibernate:
       ddl-auto: update
