--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,6 +39,12 @@ server:
     include-exception: true
     include-stacktrace: always
 
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
+
 ---
 spring:
   config:
