--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,28 +1,25 @@
 spring:
   profiles:
     active: local
-
 ---
 spring:
   config:
     activate:
       on-profile: local
   datasource:
-    driver-class-name: org.h2.Driver
-    hikari:
-#      jdbc-url: jdbc:h2:mem:testdb;MODE=MYSQL;DB_CLOSE_DELAY=-1
-      jdbc-url: jdbc:h2:mem:testdb;MODE=MYSQL
-    username: sa
-    password:
+    driver-class-name: org.mariadb.jdbc.Driver
+    username: spring
+    password: 1
+    url: jdbc:mariadb://111.111.111.111:3306/spring
   jpa:
-    defer-datasource-initialization: true
+    #    defer-datasource-initialization: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
     hibernate:
       ddl-auto: update
     database-platform: org.hibernate.dialect.H2Dialect
     show-sql: true
-#    properties:
-#      hibernate:
-#        dialect: org.hibernate.dialect.MySQLDialect
   h2:
     console:
       enabled: true
@@ -31,7 +28,7 @@ spring:
         web-allow-others: true
   sql:
     init:
-      mode: always
+      mode: never
 
 server:
   port: 8100
