--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,50 +1,66 @@
 spring:
   profiles:
-    active: localhost
+    active: local
 
 ---
 spring:
-  profiles: local
-  jpa:
-    show_sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+  config:
+    activate:
+      on-profile: local
   datasource:
-    hikari:
-      jdbc-url: jdbc:h2:mem://localhost/~/testdb;MODE=MYSQL
+    driver-class-name: org.h2.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    database-platform: org.hibernate.dialect.H2Dialect
+    show-sql: true
+    defer-datasource-initialization: true
   h2:
     console:
       enabled: true
       path: /h2-console
-      settings: 
+      settings:
         web-allow-others: true
   sql:
     init:
       mode: always
-  devtools:
-    livereload:
-      enabled: true
-  freemarker:
-    cache: false
-  thymeleaf:
-    cache: false
+
 server:
   port: 8100
   error:
     include-exception: true
     include-stacktrace: always
 
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
+        jdbc:
+          datasource:
+            init:
+              ScriptUtils: DEBUG
+
 ---
 spring:
-  profiles: docker-compose
+  config:
+    activate:
+      on-profile: docker-compose
+  datasource:
+    driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
+    show-sql: false
+  sql:
+    init:
+      mode: never
+
 server:
-  ssl:
-    enable: true
-    key-store: "classpath:keystore.p12"
-  #     key-store-password: '${KEY_PW}'
-  #     key-password: '${KEY_PW}'
   port: 8100
+  error:
+    include-exception: false
+    include-stacktrace: never
