--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,10 @@
 spring:
   profiles:
     active: local
-
+  datasource:
+    hikari:
+      minimum-idle: 5
+      idle-timeout: 600000
 ---
 spring:
   config:
